# PluginGuiMagic-CMake

./: CMakeLists.txt  README.md
Modules/: CMakeLists.txt
Modules/custom_module_test/: custom_module_test.h
Plugins/: CMakeLists.txt
Plugins/FoleysSynth/: CMakeLists.txt
